--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   },
   "dependencies": {
     "babel-preset-es2015": "^6.6.0",
+    "browser-sync": "^2.12.8",
+    "del": "^2.2.0",
     "gulp": "^3.9.1",
+    "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-sass": "^2.3.1",
+    "gulp-sequence": "^0.4.5",
+    "gulp-watch": "^4.3.5",
     "require-dir": "^0.3.0"
   }
 }
