--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp-sass": "^2.3.1",
     "gulp-sequence": "^0.4.5",
     "gulp-watch": "^4.3.5",
+    "normalize.css": "^4.1.1",
     "require-dir": "^0.3.0"
   }
 }
